--- a/BinaryClassification_On_GridPoints.ipynb
+++ b/BinaryClassification_On_GridPoints.ipynb
@@ -109,6 +109,7 @@
     "# checks to see if the load worked correctly\n",
     "print(len(inputlist))\n",
     "print(np.ndim(inputlist))\n",
+    "print(np.shape(inputlist))\n",
     "print(inputlist[0])"
    ]
   },
